--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "cookbooks/vim"]
 	path = cookbooks/vim
 	url = https://github.com/opscode-cookbooks/vim.git
+[submodule "cookbooks/cookbook-devstack"]
+	path = cookbooks/cookbook-devstack
+	url = https://github.com/torandu/cookbook-devstack.git
